Add heartbeat stats endpoint
